[gd_scene load_steps=17 format=3 uid="uid://dv4owd6fih1nl"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_1j03o"]
[ext_resource type="Texture2D" uid="uid://ckumxfk77cfnw" path="res://Assets/Graphics/Homepage BG.png" id="2_1445d"]
[ext_resource type="FontFile" uid="uid://btcx85eesy0vd" path="res://Assets/fonts/fonts - dalton5000/cmu-typewriter/Typewriter/cmuntt.ttf" id="3_lvjvd"]
[ext_resource type="AudioStream" uid="uid://c4f0jqwuf2nv8" path="res://Assets/SFX/light click - 666HeroHero.mp3" id="4_yq5pn"]
[ext_resource type="AudioStream" uid="uid://beiogaefep5g8" path="res://Assets/SFX/mechanical keyboard - freesound_community.mp3" id="5_32w2d"]
[ext_resource type="AudioStream" uid="uid://bj3gddr6ec5ev" path="res://Assets/SFX/fire-in-the-hole-geometry-dash.mp3" id="6_53ve4"]
[ext_resource type="PackedScene" uid="uid://cjnhkwa8nmm36" path="res://Scenes/Background Music Tool.tscn" id="7_nwnx8"]
[ext_resource type="PackedScene" uid="uid://b5op8tn5ax030" path="res://Scenes/Data.tscn" id="8_k7xyr"]
[ext_resource type="PackedScene" uid="uid://dfngbuwlbyse1" path="res://Scenes/Scene Transition Tool.tscn" id="9_pe0ol"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jeati"]
content_margin_left = 10.0
bg_color = Color(0.2613, 0.39, 0.379275, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s5gr3"]
bg_color = Color(0.258824, 0.388235, 0.376471, 0.392157)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2uqj"]
bg_color = Color(0.2574, 0.39, 0.37453, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ud2gs"]
bg_color = Color(0.4209, 0.584787, 0.61, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8tt5j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ehxld"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v5q5v"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_1j03o")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(574, 324)

[node name="Graphics" type="Node" parent="."]

[node name="BG" type="TextureRect" parent="Graphics"]
z_index = -3
offset_left = -9.0
offset_top = -2.0
offset_right = 1161.0
offset_bottom = 651.0
texture = ExtResource("2_1445d")
expand_mode = 1

[node name="Buttons" type="Node" parent="."]

[node name="user_input" type="LineEdit" parent="Buttons"]
anchors_preset = -1
anchor_left = -0.0460069
anchor_right = -0.0460069
offset_left = 107.0
offset_top = 269.0
offset_right = 386.0
offset_bottom = 300.0
theme_override_constants/caret_width = 2
theme_override_fonts/font = ExtResource("3_lvjvd")
theme_override_styles/focus = SubResource("StyleBoxFlat_jeati")
theme_override_styles/normal = SubResource("StyleBoxFlat_s5gr3")
placeholder_text = " Type the page here"
caret_blink = true
metadata/_edit_use_anchors_ = true

[node name="page list" type="ItemList" parent="Buttons"]
anchors_preset = -1
anchor_top = -0.0123457
anchor_bottom = -0.0123457
offset_left = 54.0
offset_top = 324.0
offset_right = 282.0
offset_bottom = 440.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_lvjvd")
theme_override_styles/panel = SubResource("StyleBoxFlat_n2uqj")
theme_override_styles/hovered = SubResource("StyleBoxFlat_ud2gs")
allow_rmb_select = true
allow_search = false
auto_height = true
item_count = 5
item_0/text = " Play"
item_0/selectable = false
item_1/text = " Settings"
item_1/selectable = false
item_2/text = " Score"
item_2/selectable = false
item_3/text = " Credits"
item_4/text = " Quit"
item_4/selectable = false
metadata/_edit_use_anchors_ = true

[node name="Typic editable title" type="TextEdit" parent="Buttons"]
anchors_preset = -1
anchor_left = -0.391493
anchor_right = 0.296875
offset_left = 505.0
offset_top = 45.0
offset_right = 810.0
offset_bottom = 170.0
mouse_force_pass_scroll_events = false
theme_override_colors/font_color = Color(0.5561, 0.83, 0.68392, 1)
theme_override_fonts/font = ExtResource("3_lvjvd")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxEmpty_8tt5j")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ehxld")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_v5q5v")
text = "Typic"
placeholder_text = "Typic"
scroll_smooth = true
scroll_past_end_of_file = true
metadata/_edit_use_anchors_ = true

[node name="Sound Effects" type="Node" parent="."]

[node name="Click" type="AudioStreamPlayer" parent="Sound Effects"]
stream = ExtResource("4_yq5pn")
volume_db = -10.0

[node name="Text_submit" type="AudioStreamPlayer" parent="Sound Effects"]
stream = ExtResource("5_32w2d")

[node name="Fire in the hole" type="AudioStreamPlayer" parent="Sound Effects"]
stream = ExtResource("6_53ve4")
max_polyphony = 5

[node name="- - - - - - - -" type="Node" parent="."]

[node name="AudioManager" parent="." instance=ExtResource("7_nwnx8")]

[node name="Data" parent="." instance=ExtResource("8_k7xyr")]

[node name="SceneTransition" parent="." instance=ExtResource("9_pe0ol")]
visible = false

[connection signal="text_changed" from="Buttons/user_input" to="." method="_on_user_input_text_changed"]
[connection signal="text_submitted" from="Buttons/user_input" to="." method="_on_user_input_text_submitted"]
[connection signal="item_clicked" from="Buttons/page list" to="." method="_on_page_list_item_clicked"]
